--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -15,6 +15,12 @@
   color: inherit;
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.portfolio-item__link:hover {
+  opacity: 0.7;
 }
 
 .portfolio-item__name {
