--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -26,4 +26,9 @@
   font-weight: 500;
   line-height: normal;
   margin-top: 78px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.movies-card-list__button:hover {
+  opacity: 0.7;
 }
