--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -15,4 +15,10 @@
   background: #303030;
   border: none;
   color: white;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.navtab__button:hover {
+  opacity: 0.7;
 }
