--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -19,6 +19,6 @@
   font-feature-settings: 'clig' off, 'liga' off;
   font-size: 18px;
   font-weight: 400;
-  line-height: 20px; /* 111.111% */
+  line-height: 20px;
   padding-bottom: 30px;
 }
