--- a/src/components/AuthInput/AuthInput.css
+++ b/src/components/AuthInput/AuthInput.css
@@ -6,8 +6,22 @@
   width: 100%;
   gap: 10px;
   margin-top: 20px;
+  position: relative;
 }
 
+.auth-input_error {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  right: 0;
+  color: #ff004c;
+  text-align: center;
+  font-family: 'Inter';
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 .auth-input__label {
   color: #8b8b8b;
   font-family: 'Inter';
