--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -7,7 +7,7 @@
 
 .movies-card-list__container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   margin-top: 20px;
   column-gap: 30px;
 }
@@ -31,4 +31,47 @@
 }
 .movies-card-list__button:hover {
   opacity: 0.7;
+}
+
+@media (max-width: 1180px) {
+  .movies-card-list {
+    max-width: 1024px;
+  }
+}
+
+@media (max-width: 1060px) {
+  .movies-card-list {
+    max-width: 868px;
+  }
+}
+
+@media (max-width: 900px) {
+  .movies-card-list {
+    max-width: 768px;
+  }
+  .movies-card-list__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .movies-card-list {
+    max-width: 728px;
+  }
+}
+
+@media (max-width: 768px) {
+  .movies-card-list {
+    max-width: 768px;
+    padding-right: 30px;
+    padding-left: 30px;
+    box-sizing: border-box;
+    padding-bottom: 80px;
+  }
+  .movies-card-list__container {
+    margin-top: 33px;
+  }
+  .movies-card-list__button {
+    margin-top: 50px;
+  }
 }
