--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 20px;
+  margin-top: 79px;
 }
 
 .footer__title {
@@ -60,4 +61,68 @@
 .footer__github {
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 1180px) {
+  .footer {
+    max-width: 1024px;
+  }
+}
+
+@media (max-width: 1060px) {
+  .footer {
+    max-width: 868px;
+  }
+}
+
+@media (max-width: 900px) {
+  .footer {
+    max-width: 768px;
+  }
+}
+
+@media (max-width: 800px) {
+  .footer {
+    max-width: 728px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 400px) {
+  .footer {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .footer__title {
+    font-size: 12px;
+  }
+  .footer__container {
+    flex-direction: column;
+    padding-top: 30px;
+  }
+  .footer__year {
+    order: 2;
+    margin-top: 30px;
+    font-size: 12px;
+    color: #8b8b8b;
+  }
+  .footer__items {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+  .footer__yandex {
+    font-size: 12px;
+  }
+  .footer__github {
+    font-size: 12px;
+  }
 }
