--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,5 +1,5 @@
 .moviescard {
-  width: 360px;
+  width: 100%;
   font-family: 'Inter';
   font-style: normal;
   margin-top: 60px;
@@ -7,7 +7,7 @@
 }
 
 .moviescard__image {
-  width: 360px;
+  width: 100%;
   height: 201px;
   object-fit: cover;
   border-radius: 5px;
@@ -52,9 +52,15 @@
   text-align: center;
   font-size: 11px;
   font-weight: 400;
-  line-height: 10px; /* 90.909% */
+  line-height: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 3px 4px;
+}
+
+@media (max-width: 768px) {
+  .moviescard {
+    margin-top: 47px;
+  }
 }
