--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -8,7 +8,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
-  line-height: 16px; /* 133.333% */
+  line-height: 16px;
   width: 96px;
   height: 36px;
   border-radius: 10px;
@@ -21,4 +21,16 @@
 
 .navtab__button:hover {
   opacity: 0.7;
+}
+
+@media (max-width: 400px) {
+  .navtab {
+    padding-bottom: 17px;
+  }
+  .navtab__button {
+    width: 82px;
+    height: 26px;
+    font-size: 10px;
+    line-height: 16px;
+  }
 }
