--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -7,10 +7,11 @@
   justify-content: center;
   align-items: start;
   margin-top: 70px;
+  position: relative;
 }
 
 .auth__title {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
@@ -22,5 +23,15 @@
 @media (max-width: 768px) {
   .auth {
     margin-top: 232px;
+  }
+}
+
+@media (max-width: 430px) {
+  .auth {
+    margin-top: 56px;
+    align-items: center;
+  }
+  .auth__title {
+    margin: 50px 0 60px 0;
   }
 }
