--- a/src/components/AuthButton/AuthButton.css
+++ b/src/components/AuthButton/AuthButton.css
@@ -11,7 +11,7 @@
   border: none;
   color: inherit;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -20,6 +20,10 @@
   transition: all 0.3s ease-in-out;
 }
 
+.auth-button_inactive {
+  background: #f8f8f8;
+  color: #c2c2c2;
+}
 .auth-button:hover {
   opacity: 0.8;
 }
@@ -29,7 +33,7 @@
   padding: 0;
   color: #8b8b8b;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -44,7 +48,7 @@
   margin-left: 6px;
   color: #4285f4;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -55,4 +59,23 @@
 
 .auth-button__link:hover {
   opacity: 0.7;
+}
+
+@media (max-width: 430px) {
+  .auth-button {
+    max-width: 260px;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .auth-button__link {
+    font-size: 12px;
+    font-weight: 500;
+  }
+  .auth-button__question {
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: 14px;
+    margin-bottom: 30px;
+  }
 }
