--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -5,7 +5,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 18px; /* 150% */
+  line-height: 18px;
   align-items: center;
 }
 
@@ -49,4 +49,10 @@
 .checkbox__input:checked + .checkbox__track .checkbox__indicator {
   background: white;
   transform: translateX(18px);
+}
+
+@media (max-width: 400px) {
+  .checkbox {
+    font-size: 11px;
+  }
 }
