--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -2,11 +2,12 @@
   display: flex;
   text-align: center;
   flex-direction: column;
+  font-family: 'Inter', 'Arial', sans-serif;
 }
 
 .page-not-found__404 {
   text-align: center;
-  font-family: 'Inter';
+
   font-size: 140px;
   font-style: normal;
   font-weight: 400;
@@ -18,7 +19,6 @@
 
 .page-not-found__subtitle {
   text-align: center;
-  font-family: 'Inter';
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -31,7 +31,7 @@
 .page-not-found__button {
   color: #4285f4;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -44,5 +44,24 @@
 @media (max-width: 768px) {
   .page-not-found__404 {
     margin-top: 408px;
+  }
+  .page-not-found__button {
+    margin-bottom: 225px;
+  }
+}
+
+@media (max-width: 400px) {
+  .page-not-found__404 {
+    margin-top: 329px;
+    font-size: 80px;
+  }
+  .page-not-found__subtitle {
+    margin-top: 10px;
+    font-size: 12px;
+  }
+  .page-not-found__button {
+    margin-top: 284px;
+    font-size: 12px;
+    margin-bottom: 30px;
   }
 }
