--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -1,5 +1,5 @@
 .portfolio-item {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   padding-bottom: 19px;
   border-bottom: 1px solid #424242;
@@ -55,10 +55,4 @@
     line-height: 28px;
     letter-spacing: -0.72px;
   }
-  /* .portfolio-item {
-    border-bottom: 1px solid #e6e6e6;
-  }
-  .portfolio-item_border {
-    border-bottom: none;
-  } */
 }
