--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -5,7 +5,7 @@
   margin-top: 110px;
   display: flex;
   flex-direction: column;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   margin-bottom: 110px;
 }
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 70px;
-  gap: 15px;
+  gap: 40px;
 }
 
 .aboutproject__part {
@@ -131,6 +131,13 @@
     padding-right: 50px;
     box-sizing: border-box;
   }
+  .aboutproject__info {
+    gap: 30px;
+  }
+
+  .aboutproject__oneweek {
+    max-width: 140px;
+  }
 
   .aboutproject__part {
     max-width: 319px;
@@ -152,11 +159,12 @@
   .aboutproject {
     padding-left: 18px;
     padding-right: 18px;
-    margin: 70px 0;
+    margin: 70px 0 60px 0;
   }
   .aboutproject__info {
     flex-wrap: wrap;
     margin-top: 60px;
+    gap: 60px;
   }
   .aboutprohect__subtitle {
     font-size: 18px;
