--- a/src/components/AuthInput/AuthInput.css
+++ b/src/components/AuthInput/AuthInput.css
@@ -16,7 +16,7 @@
   right: 0;
   color: #ff004c;
   text-align: center;
-  font-family: 'Inter';
+  font-family: '"Inter", "Arial", sans-serif;';
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
@@ -24,7 +24,7 @@
 }
 .auth-input__label {
   color: #8b8b8b;
-  font-family: 'Inter';
+  font-family: '"Inter", "Arial", sans-serif;';
   font-size: 10px;
   font-style: normal;
   font-weight: 400;
@@ -40,4 +40,13 @@
   height: 46px;
   padding: 15px;
   box-sizing: border-box;
+}
+
+@media (max-width: 430px) {
+  .auth-input {
+    max-width: 260px;
+  }
+  .auth-input__input {
+    width: 260px;
+  }
 }
