--- a/src/components/MainTitle/MainTitle.css
+++ b/src/components/MainTitle/MainTitle.css
@@ -7,6 +7,7 @@
   padding-bottom: 23px;
   border-bottom: 1px solid #dadada;
   align-self: start;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: normal;
