--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,8 +1,8 @@
 .moviescard {
   width: 100%;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
-  margin-top: 60px;
+  margin-top: 59px;
   position: relative;
 }
 
@@ -12,6 +12,37 @@
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
+  display: block;
+}
+
+.moviescard__save-button {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  cursor: pointer;
+  background: #313131;
+  color: inherit;
+  border: none;
+  border-radius: 30px;
+  padding: 6px 7px;
+  box-sizing: border-box;
+  width: 72px;
+  height: 21px;
+  text-align: center;
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 9px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s ease-in-out;
+}
+
+.moviescard:hover .moviescard__save-button {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
 
 .moviescard__like {
@@ -21,12 +52,30 @@
   object-fit: cover;
 }
 
+.moviescard__delete {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  object-fit: cover;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s ease-in-out;
+}
+.moviescard:hover .moviescard__delete {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s, opacity 0.5s ease-in-out;
+}
+
 .moviescard__info {
   display: flex;
   justify-content: space-between;
   padding-left: 14px;
   padding-right: 14px;
   margin-top: 14px;
+  gap: 30px;
+  box-sizing: border-box;
 }
 
 .moviescard__name {
@@ -38,7 +87,7 @@
   overflow: hidden;
   max-width: 250px;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  max-height: 32px;
 }
 
 .moviescard__duration {
@@ -57,10 +106,38 @@
   justify-content: center;
   align-items: center;
   padding: 3px 4px;
+  box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
   .moviescard {
     margin-top: 47px;
+    max-width: 339px;
+  }
+  .moviescard__info {
+    gap: 37px;
+    padding: 0;
+    margin-top: 25px;
+  }
+  .moviescard__image {
+    height: 190px;
+  }
+}
+
+@media (max-width: 400px) {
+  .moviescard {
+    margin-top: 36px;
+    width: 300px;
+  }
+  .moviescard__image {
+    height: 168px;
+    width: 300px;
+  }
+  .moviescard__info {
+    margin-top: 16px;
+    gap: 8px;
+  }
+  .moviescard__name {
+    font-size: 12px;
   }
 }
