--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -2,13 +2,13 @@
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
-  padding-bottom: 160px;
+  padding-bottom: 80px;
 }
 
 .movies-card-list__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin-top: 20px;
+  margin-top: 21px;
   column-gap: 30px;
 }
 
@@ -16,11 +16,12 @@
   background-color: inherit;
   border-radius: 6px;
   border: 1px solid #424242;
-  width: 320px;
+  max-width: 320px;
+  width: 100%;
   height: 36px;
   color: inherit;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
@@ -42,15 +43,16 @@
 @media (max-width: 1060px) {
   .movies-card-list {
     max-width: 868px;
+    justify-content: space-between;
+  }
+  .movies-card-list__container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 900px) {
   .movies-card-list {
     max-width: 768px;
-  }
-  .movies-card-list__container {
-    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -73,5 +75,28 @@
   }
   .movies-card-list__button {
     margin-top: 50px;
+  }
+}
+
+@media (max-width: 555px) {
+  .movies-card-list__container {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+}
+
+@media (max-width: 400px) {
+  .movies-card-list {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .movies-card-list__container {
+    margin-top: 14px;
+    margin-bottom: 13px;
+  }
+
+  .movies-card-list__button {
+    margin-top: 50px;
+    width: 240px;
   }
 }
