--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   padding-bottom: 125px;
 }
@@ -54,7 +54,7 @@
     padding-right: 50px;
     margin-top: 90px;
     box-sizing: border-box;
-    padding-bottom: 70px;
+    padding-bottom: 90px;
   }
 }
 
@@ -63,6 +63,7 @@
     padding-left: 14px;
     padding-right: 14px;
     margin-top: 0;
+    padding-bottom: 70px;
   }
   .portfolio__title {
     font-size: 14px;
