--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   margin-top: 20px;
 }
