--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -22,6 +22,7 @@
 
 .searchform__input {
   max-width: 1086px;
+  padding: 0;
   width: 100%;
   height: 50px;
   border: none;
@@ -35,7 +36,7 @@
 .searchform__input::placeholder {
   color: #8b8b8b;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -45,8 +46,11 @@
   background-image: url('../../images/find-icon.svg');
   background-position: center;
   background-repeat: no-repeat;
-  width: 44px;
+  background-size: 44px;
+  max-width: 44px;
   height: 44px;
+  width: 100%;
+  padding: 0;
   border: none;
   background-color: inherit;
 }
@@ -84,5 +88,19 @@
   }
   .searchform__container {
     padding-bottom: 41px;
+  }
+}
+
+@media (max-width: 400px) {
+  .searchform {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+  .searchform__container {
+    padding-bottom: 47px;
+  }
+  .searchform__input {
+    padding-left: 13px;
+    height: 44px;
   }
 }
