--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -2,6 +2,7 @@
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
+  padding: 0;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
