--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -29,8 +29,11 @@
   border-radius: 8px;
   background: #2f2f2f;
   padding-left: 20px;
-  outline: none;
   color: white;
+  box-sizing: border-box;
+}
+.searchform__input:focus {
+  outline: 2px ridge rgba(61, 220, 132, 0.6);
 }
 
 .searchform__input::placeholder {
@@ -53,6 +56,12 @@
   padding: 0;
   border: none;
   background-color: inherit;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.searchform__button:hover {
+  opacity: 0.7;
 }
 
 @media (max-width: 1180px) {
