--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -24,6 +24,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 123px;
+  position: relative;
 }
 .profile__label {
   max-width: 410px;
@@ -124,6 +125,20 @@
   text-align: center;
   font-family: 'Inter', 'Arial', sans-serif;
   font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.profile__api-success {
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  right: 0;
+  color: rgba(61, 220, 132, 0.6);
+  text-align: center;
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-size: 9px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
