--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -65,6 +65,14 @@
   opacity: 0.7;
 }
 
+.searchform__button_inactive {
+  opacity: 0.3;
+}
+
+.searchform__button_inactive:hover {
+  opacity: 0.3;
+}
+
 @media (max-width: 1180px) {
   .searchform {
     max-width: 1024px;
