--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 0 auto;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   margin-top: 70px;
   position: relative;
 }
