--- a/src/components/AuthInput/AuthInput.css
+++ b/src/components/AuthInput/AuthInput.css
@@ -1,7 +1,7 @@
 .auth-input {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   gap: 10px;
