--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -209,6 +209,9 @@
     padding: 0 30px;
     box-sizing: border-box;
   }
+}
+
+@media (max-width: 555px) {
   .header__burger {
     display: block;
   }
